@@ -9,7 +9,8 @@ Version 5.3.0 (TBD)
     Fixed issue with loading or pasting contents with large base64 encoded images on Safari #TINY-4715
     Fixed supplementary special characters being truncated when inserted into the editor. Patch contributed by mlitwin. #TINY-4791
     Fixed toolbar buttons not set to disabled when the editor is in readonly mode #TINY-4592
-    Fixed bug where title, width, height would be set to empty string values when updating an image and removing those using the image dialog. #TINY-4786
+    Fixed bug where title, width, height would be set to empty string values when updating an image and removing those using the image dialog #TINY-4786
+    Fixed the placeholder not hiding when pasting content into the editor #TINY-4828
 Version 5.2.2 (TBD)
     Fixed an issue where anchors could not be inserted on empty lines #TINY-2788
 Version 5.2.1 (2020-03-25)
